--- a/swc_front/package.json
+++ b/swc_front/package.json
@@ -10,7 +10,10 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\"",
-    "electron": "electron ."
+    "electron": "electron .",
+    "start-react": "cd react_front && npm start",
+    "start-electron": "npx electron .",
+    "start-both": "concurrently \"npm run start-react\" \"npm run start-electron\""
   },
   "keywords": [],
   "author": {
@@ -32,6 +35,7 @@
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
+    "concurrently": "^8.2.2",
     "electron": "24.4.0"
   }
 }
