--- a/swc_front/react_front/package.json
+++ b/swc_front/react_front/package.json
@@ -15,11 +15,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "babel-plugin-macros": "^3.1.0",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "electron": "^24.4.0",
+    "html2canvas": "^1.4.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
